--- a/pool.html
+++ b/pool.html
@@ -29,94 +29,80 @@
 </head>
 
 <body>
-    <!-- header start --
-        <header class="header-area">
-            <div class="header-top black-bg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-4 col-md-4 col-12 col-sm-4">
-                            <div class="welcome-area">
-                                <p>Default welcome msg! </p>
-                            </div>
+    <!-- header start -->
+    <header class="header-area">
+        <div class="header-top black-bg">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 col-12 col-sm-4">
+                        <div class="welcome-area">
+                            <p>Welcome &#128525 &#128525 &#128525 &#128516</p>
                         </div>
-                        <div class="col-lg-8 col-md-8 col-12 col-sm-8">
-                            <div class="account-curr-lang-wrap f-right">
-                                <ul>
-                                    <li class="top-hover"><a href="#">Language: (ENG) <i class="ion-chevron-down"></i></a>
-                                        <ul>
-                                            <li><a href="#">Bangla </a></li>
-                                            <li><a href="#">Arabic</a></li>
-                                            <li><a href="#">Hindi </a></li>
-                                            <li><a href="#">Spanish</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="top-hover"><a href="#">Currency: (USD) <i class="ion-chevron-down"></i></a>
-                                        <ul>
-                                            <li><a href="#">Taka (BDT)</a></li>
-                                            <li><a href="#">Riyal (SAR)</a></li>
-                                            <li><a href="#">Rupee (INR)</a></li>
-                                            <li><a href="#">Dirham (AED)</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="top-hover"><a href="#">Setting  <i class="ion-chevron-down"></i></a>
-                                        <ul>
-                                            <li><a href="#wishlist">Wishlist  </a></li>
-                                            <li><a href="login-register.html">Login</a></li>
-                                            <li><a href="login-register.html">Register</a></li>
-                                            <li><a href="my-account.html">my account</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </div>
+                    </div>
+                    <div class="col-lg-8 col-md-8 col-12 col-sm-8">
+                        <div class="account-curr-lang-wrap f-right">
+                            <ul>
+
+
+                                <li class="top-hover"><a href="#">Setting  <i class="ion-chevron-down"></i></a>
+                                    <ul>
+                                        <!----   <li><a href="wishlist.html">Wishlist  </a></li>-->
+                                        <li><a href="login-register.html">Login</a></li>
+                                        <li><a href="login-register.html">Register</a></li>
+                                        <!----  <li><a href="my-account.html">my account</a></li>-->
+                                    </ul>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="header-middle">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-3 col-md-4 col-12 col-sm-4">
-                            <div class="logo">
-                                <a href="index.html">
-                                    <img alt="" src="assets/img/logo/logo.png">
+        </div>
+        <div class="header-middle">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-4 col-12 col-sm-4">
+                        <div class="logo">
+                            <a href="index.html">
+                                <img alt="" src="assets/images/Princess-Luxury.png">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-9 col-md-8 col-12 col-sm-8">
+                        <div class="header-middle-right f-right">
+                            <div class="header-login">
+                                <a href="login-register.html">
+                                    <div class="header-icon-style">
+                                        <i class="icon-user icons"></i>
+                                    </div>
+                                    <div class="login-text-content">
+                                        <p>Register <br> or <span>Sign in</span></p>
+                                    </div>
                                 </a>
                             </div>
-                        </div>
-                        <div class="col-lg-9 col-md-8 col-12 col-sm-8">
-                            <div class="header-middle-right f-right">
-                                <div class="header-login">
-                                    <a href="login-register.html">
-                                        <div class="header-icon-style">
-                                            <i class="icon-user icons"></i>
-                                        </div>
-                                        <div class="login-text-content">
-                                            <p>Register <br> or <span>Sign in</span></p>
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="header-wishlist">
-                                    <a href="#wishlist">
-                                        <div class="header-icon-style">
-                                            <i class="icon-heart icons"></i>
-                                        </div>
-                                        <div class="wishlist-text">
-                                            <p>Your <br> <span>Wishlist</span></p>
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="header-cart">
-                                    <a href="#">
-                                        <div class="header-icon-style">
-                                            <i class="icon-handbag icons"></i>
-                                            <span class="count-style">02</span>
-                                        </div>
-                                        <div class="cart-text">
-                                            <span class="digit">My Cart</span>
-                                            <span class="cart-digit-bold">$209.00</span>
-                                        </div>
-                                    </a>
-                                    <div class="shopping-cart-content">
-                                        <ul>
+                            <div class="header-wishlist">
+                                <a href="wishlist.html#">
+                                    <div class="header-icon-style">
+                                        <i class="icon-heart icons"></i>
+                                    </div>
+                                    <!---- <div class="wishlist-text">
+                                        <p>Your <br> <span>Wishlist</span></p>
+                                    </div>-->
+                                </a>
+                            </div>
+                            <div class="header-cart">
+                                <a href="#" id="header-cart">
+                                    <div class="header-icon-style">
+                                        <i class="icon-handbag icons"></i>
+                                        <span class="count-style" id="product-count">02</span>
+                                    </div>
+                                    <div class="cart-text">
+                                        <span class="digit">My Cart</span>
+                                        <span class="cart-digit-bold" id="total-value">$209.00</span>
+                                    </div>
+                                </a>
+                                <div class="shopping-cart-content" id="shopping-cart">
+                                    <!-- <ul>
                                             <li class="single-shopping-cart">
                                                 <div class="shopping-cart-img">
                                                     <a href="#"><img alt="" src="assets/img/cart/cart-1.jpg"></a>
@@ -143,70 +129,70 @@
                                                     <a href="#"><i class="ion ion-close"></i></a>
                                                 </div>
                                             </li>
-                                        </ul>
-                                        <div class="shopping-cart-total">
+                                        </ul> -->
+                                    <!-- <div class="shopping-cart-total">
                                             <h4>Shipping : <span>$20.00</span></h4>
                                             <h4>Total : <span class="shop-total">$260.00</span></h4>
                                         </div>
                                         <div class="shopping-cart-btn">
                                             <a href="cart-page.html">view cart</a>
                                             <a href="checkout.html">checkout</a>
-                                        </div>
-                                    </div>
+                                        </div> -->
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div> -->
-    <div class="header-bottom transparent-bar black-bg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-12">
-                    <div class="main-menu">
-                        <nav>
-                            <ul>
-                                <li class="top-hover"><a href="index.html">home </i></a>
-                                    <!----   <ul class="submenu">
+            </div>
+        </div>
+        <div class="header-bottom transparent-bar black-bg">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-12">
+                        <div class="main-menu">
+                            <nav>
+                                <ul>
+                                    <li class="top-hover"><a href="index.html">home </i></a>
+                                        <!----   <ul class="submenu">
                                                 <li><a href="index.html">home version 1</a></li>
                                                 <li><a href="index-2.html">home version 2</a></li>
                                             </ul>-->
-                                </li>
-                                <li><a href="https://princessluxuryhotels.com/about-i/">about</a></li>
+                                    </li>
+                                    <li><a href="https://princessluxuryhotels.com/about-i/">about</a></li>
 
-                                <li><a href="https://princessluxuryhotels.com/contact-i/" target="_blank">contact us</a></li>
+                                    <li><a href="https://princessluxuryhotels.com/contact-i/" target="_blank">contact us</a></li>
 
-                            </ul>
-                        </nav>
+                                </ul>
+                            </nav>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- mobile-menu-area-start -->
-    <div class="mobile-menu-area">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="mobile-menu">
-                        <nav id="mobile-menu-active">
-                            <ul class="menu-overflow" id="nav">
-                                <li><a href="index.html">Home</a>
+        <!-- mobile-menu-area-start -->
+        <div class="mobile-menu-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="mobile-menu">
+                            <nav id="mobile-menu-active">
+                                <ul class="menu-overflow" id="nav">
+                                    <li><a href="index.html">Home</a>
 
 
-                                </li>
-                                <li><a href="https://princessluxuryhotels.com/contact-i/">about us</a></li>
-                                <li><a href="https://princessluxuryhotels.com/contact-i/">contact us</a></li>
+                                    </li>
+                                    <li><a href="https://princessluxuryhotels.com/contact-i/">about us</a></li>
+                                    <li><a href="https://princessluxuryhotels.com/contact-i/">contact us</a></li>
 
-                            </ul>
+                                </ul>
 
-                        </nav>
+                            </nav>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- mobile-menu-area-end -->
+        <!-- mobile-menu-area-end -->
     </header>
     <div class="slider-area-2">
         <div class="slider-active owl-dot-style owl-carousel">
