adding-admin-pages

--- a/admin/index.html
+++ b/admin/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Visitors an Admin Panel Category Bootstrap Responsive Website Template | Home :: w3layouts</title>
+    <title> | Home Princess Luxury admin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="Visitors Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -266,7 +266,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <span>Dashboard</span>
                             </a>
                         </li>
-
+                        <!----
                         <li class="sub-menu">
                             <a href="javascript:;">
                                 <i class="fa fa-book"></i>
@@ -284,25 +284,26 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <span>Font awesome </span>
                             </a>
                         </li>
+					-->
                         <li class="sub-menu">
                             <a href="javascript:;">
-                                <i class="fa fa-th"></i>
-                                <span>Data Tables</span>
+                                <i class="fa fa-shopping-cart"></i>
+                                <span> My Orders</span>
                             </a>
                             <ul class="sub">
-                                <li><a href="basic_table.html">Basic Table</a></li>
-                                <li><a href="responsive_table.html">Responsive Table</a></li>
+
+                                <li><a href="order_list.html">Order page</a></li>
                             </ul>
                         </li>
                         <li class="sub-menu">
                             <a href="javascript:;">
-                                <i class="fa fa-tasks"></i>
-                                <span>Form Components</span>
+                                <i class="fa fa-group"></i>
+                                <span>Register a Waiter</span>
                             </a>
                             <ul class="sub">
-                                <li><a href="form_component.html">Form Elements</a></li>
-                                <li><a href="form_validation.html">Form Validation</a></li>
-                                <li><a href="dropzone.html">Dropzone</a></li>
+                                <li><a href="register.html">Register</a></li>
+                                <!----    <li><a href="form_validation.html">Form Validation</a></li>-->
+                                <li><a href="dropzone.html">Add Image</a></li>
                             </ul>
                         </li>
                         <li class="sub-menu">
@@ -315,24 +316,26 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <li><a href="mail_compose.html">Compose Mail</a></li>
                             </ul>
                         </li>
+
+
                         <li class="sub-menu">
                             <a href="javascript:;">
-                                <i class=" fa fa-bar-chart-o"></i>
-                                <span>Charts</span>
+                                <i class=" fa fa-times-circle-o"></i>
+                                <span>Cancel Order</span>
                             </a>
                             <ul class="sub">
-                                <li><a href="chartjs.html">Chart js</a></li>
-                                <li><a href="flot_chart.html">Flot Charts</a></li>
+                                <li><a href="edit.html">Edit order</a></li>
+                                <li><a href="responsive_table.html">Cancel order</a></li>
                             </ul>
                         </li>
                         <li class="sub-menu">
                             <a href="javascript:;">
                                 <i class=" fa fa-bar-chart-o"></i>
-                                <span>Maps</span>
+                                <span>Oder Summary</span>
                             </a>
                             <ul class="sub">
-                                <li><a href="google_map.html">Google Map</a></li>
-                                <li><a href="vector_map.html">Vector Map</a></li>
+                                <li><a href="responsive_table.html">Admin Orders</a></li>
+
                             </ul>
                         </li>
                         <li class="sub-menu">
@@ -685,7 +688,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="clearfix"> </div>
                 </div>
-                <!-- //tasks -->
+                <!-- //tasks --
                 <div class="agileits-w3layouts-stats">
                     <div class="col-md-4 stats-info widget">
                         <div class="stats-info-agileits">
@@ -730,7 +733,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-8 w3agile-notifications">
                         <div class="notifications">
-                            <!--notification start-->
+                            <!--notification start--
 
                             <header class="panel-heading">
                                 Notification
@@ -740,7 +743,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <span class="alert-icon"><i class="fa fa-envelope-o"></i></span>
                                     <div class="notification-info">
                                         <ul class="clearfix notification-meta">
-                                            <li class="pull-left notification-sender"><span><a href="#">Jonathan Smith</a></span> send you a mail </li>
+                                            <li class="pull-left notification-sender"><span><a href="#">Frank</a></span> send you a mail </li>
                                             <li class="pull-right notification-time">1 min ago</li>
                                         </ul>
                                         <p>
@@ -760,7 +763,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                         </p>
                                     </div>
                                 </div>
-                                <!----    <div class="alert alert-success ">
+                                <div class="alert alert-success ">
                                     <span class="alert-icon"><i class="fa fa-comments-o"></i></span>
                                     <div class="notification-info">
                                         <ul class="clearfix notification-meta">
@@ -783,7 +786,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             Next 5 July Thursday is the last day
                                         </p>
                                     </div>
-                                </div>-->
+                                </div>
                                 <div class="alert alert-info clearfix">
                                     <span class="alert-icon"><i class="fa fa-envelope-o"></i></span>
                                     <div class="notification-info">
@@ -800,10 +803,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             </div>
 
                             <!--notification end-->
-                        </div>
-                    </div>
+                </div>
+                </div>
 
-                    <div class="clearfix"> </div>
+                <div class="clearfix"> </div>
                 </div>
             </section>
             <!-- footer -->
