--- a/cart-page.html
+++ b/cart-page.html
@@ -361,41 +361,47 @@
                             <form>
 
                                 <input type="text" required="" name="names" placeholder="Your Names">
-
-                                <select id="Locations">
-                                    <Option value="">Location in the Hotel</Option>
-                                    <Option value="">Resturant</Option>
-                                    <Option value="">Garden Bar</Option>
-                                    <Option value="">ceaser's Lounge</Option>
-                                    <Option value="">Receiption</Option>
-                                </select>
-
                                 <input type="number" required="" name="name" placeholder="Table Number">
 
-                                <button class="cart-btn-2" type="submit">Place your Order</button>
-                            </form>
+                                <h4 class="shop-sidebar-title">Please Pick Only One Location</h4>
+                                <div class="sidebar-list-style mt-20">
+                                    <ul>
+                                        <li><input type="checkbox"><a href="#">Pool Deck</a></li>
+                                        <li><input type="checkbox"><a href="#">Garden Bar </a></li>
+                                        <li><input type="checkbox"><a href="#">Resturant </a></li>
+                                        <li><input type="checkbox"><a href="#">cacer's Lounge </a></li>
+                                        <li><input type="checkbox"><a href="#">Sky view</a></li>
+
+                                    </ul>
+                                </div>
                         </div>
+
+
+
+                        <!----    <button class="cart-btn-2" type="submit">Place your Order</button>-->
+                        </form>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12">
-                    <div class="grand-totall">
-                        <div class="title-wrap">
-                            <h4 class="cart-bottom-title section-bg-gary-cart">Cart Total</h4>
-                        </div>
-                        <h5>Total products <span>$260.00</span></h5>
-                        <!---- <div class="total-shipping">
+            </div>
+            <div class="col-lg-4 col-md-12">
+                <div class="grand-totall">
+                    <div class="title-wrap">
+                        <h4 class="cart-bottom-title section-bg-gary-cart">Cart Total</h4>
+                    </div>
+                    <h5>Total products <span>$260.00</span></h5>
+                    <!---- <div class="total-shipping">
                             <h5>Total shipping</h5>
                             <ul>
                                 <li><input type="checkbox"> Standard <span>$20.00</span></li>
                                 <li><input type="checkbox"> Express <span>$30.00</span></li>
                             </ul>
                         </div>-->
-                        <h4 class="grand-totall-title">Grand Total <span>$260.00</span></h4>
-                        <a href="#">Proceed to Checkout</a>
-                    </div>
+                    <h4 class="grand-totall-title">Grand Total <span>$260.00</span></h4>
+                    <a href="#">Proceed to Checkout</a>
                 </div>
             </div>
         </div>
+    </div>
     </div>
     </div>
     </div>
