modifying the admin dashboard

--- a/admin/test.html
+++ b/admin/test.html
@@ -66,3 +66,116 @@
 <td><span class="label label-success">PAID</span></td>
 <td>&#8358;105,000</td>
 <td>Jul 7, 2013</td>
+
+
+
+
+
+
+
+
+<aside>
+    <div id="sidebar" class="nav-collapse">
+        <!-- sidebar menu start-->
+        <div class="leftside-navigation">
+            <ul class="sidebar-menu" id="nav-accordion">
+                <li>
+                    <a class="active" href="index.html">
+                        <i class="fa fa-dashboard"></i>
+                        <span>Dashboard</span>
+                    </a>
+                </li>
+                <!----
+                <li class="sub-menu">
+                    <a href="javascript:;">
+                        <i class="fa fa-book"></i>
+                        <span>UI Elements</span>
+                    </a>
+                    <ul class="sub">
+                        <li><a href="typography.html">Typography</a></li>
+                        <li><a href="glyphicon.html">glyphicon</a></li>
+                        <li><a href="grids.html">Grids</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="fontawesome.html">
+                        <i class="fa fa-bullhorn"></i>
+                        <span>Font awesome </span>
+                    </a>
+                </li>
+            -->
+                <li class="sub-menu">
+                    <a href="javascript:;">
+                        <i class="fa fa-shopping-cart"></i>
+                        <span> My Orders</span>
+                    </a>
+                    <ul class="sub">
+
+                        <li><a href="order_list.html">Order page</a></li>
+                    </ul>
+                </li>
+                <li class="sub-menu">
+                    <a href="javascript:;">
+                        <i class="fa fa-group"></i>
+                        <span>Register a Waiter</span>
+                    </a>
+                    <ul class="sub">
+                        <li><a href="register.html">Register</a></li>
+                        <!----    <li><a href="form_validation.html">Form Validation</a></li>-->
+                        <li><a href="dropzone.html">Add Image</a></li>
+                    </ul>
+                </li>
+                <li class="sub-menu">
+                    <a href="javascript:;">
+                        <i class="fa fa-envelope"></i>
+                        <span>Mail </span>
+                    </a>
+                    <ul class="sub">
+                        <li><a href="mail.html">Inbox</a></li>
+                        <li><a href="mail_compose.html">Compose Mail</a></li>
+                    </ul>
+                </li>
+
+
+                <li class="sub-menu">
+                    <a href="javascript:;">
+                        <i class=" fa fa-times-circle-o"></i>
+                        <span>Cancel Order</span>
+                    </a>
+                    <ul class="sub">
+                        <li><a href="edit.html">Edit order</a></li>
+                        <li><a href="responsive_table.html">Cancel order</a></li>
+                    </ul>
+                </li>
+                <li class="sub-menu">
+                    <a href="javascript:;">
+                        <i class=" fa fa-bar-chart-o"></i>
+                        <span>Oder Summary</span>
+                    </a>
+                    <ul class="sub">
+                        <li><a href="responsive_table.html">Admin Orders</a></li>
+
+                    </ul>
+                </li>
+                <li class="sub-menu">
+                    <a href="javascript:;">
+                        <i class="fa fa-glass"></i>
+                        <span>Extra</span>
+                    </a>
+                    <ul class="sub">
+                        <li><a href="gallery.html">Gallery</a></li>
+                        <li><a href="404.html">404 Error</a></li>
+                        <li><a href="registration.html">Registration</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="login.html">
+                        <i class="fa fa-user"></i>
+                        <span>Login Page</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <!-- sidebar menu end-->
+    </div>
+</aside>
