--- a/admin/order_list.html
+++ b/admin/order_list.html
@@ -263,12 +263,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="leftside-navigation">
                     <ul class="sidebar-menu" id="nav-accordion">
                         <li>
-                            <a href="index.html">
+                            <a class="active" href="index.html">
                                 <i class="fa fa-dashboard"></i>
                                 <span>Dashboard</span>
                             </a>
                         </li>
-
+                        <!----
                         <li class="sub-menu">
                             <a href="javascript:;">
                                 <i class="fa fa-book"></i>
@@ -286,25 +286,26 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <span>Font awesome </span>
                             </a>
                         </li>
+					-->
                         <li class="sub-menu">
                             <a href="javascript:;">
-                                <i class="fa fa-th"></i>
-                                <span>Data Tables</span>
+                                <i class="fa fa-shopping-cart"></i>
+                                <span> My Orders</span>
                             </a>
                             <ul class="sub">
-                                <li><a href="basic_table.html">Basic Table</a></li>
-                                <li><a href="responsive_table.html">Responsive Table</a></li>
+
+                                <li><a href="order_list.html">Order page</a></li>
                             </ul>
                         </li>
                         <li class="sub-menu">
-                            <a class="active" href="javascript:;">
-                                <i class="fa fa-tasks"></i>
-                                <span>Form Components</span>
+                            <a href="javascript:;">
+                                <i class="fa fa-group"></i>
+                                <span>Register a Waiter</span>
                             </a>
                             <ul class="sub">
-                                <li><a href="form_component.html">Form Elements</a></li>
-                                <li><a class="active" href="form_validation.html">Form Validation</a></li>
-                                <li><a href="dropzone.html">Dropzone</a></li>
+                                <li><a href="register.html">Register</a></li>
+                                <!----    <li><a href="form_validation.html">Form Validation</a></li>-->
+                                <li><a href="dropzone.html">Add Image</a></li>
                             </ul>
                         </li>
                         <li class="sub-menu">
@@ -317,24 +318,26 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <li><a href="mail_compose.html">Compose Mail</a></li>
                             </ul>
                         </li>
+
+
                         <li class="sub-menu">
                             <a href="javascript:;">
-                                <i class=" fa fa-bar-chart-o"></i>
-                                <span>Charts</span>
+                                <i class=" fa fa-times-circle-o"></i>
+                                <span>Cancel Order</span>
                             </a>
                             <ul class="sub">
-                                <li><a href="chartjs.html">Chart js</a></li>
-                                <li><a href="flot_chart.html">Flot Charts</a></li>
+                                <li><a href="edit.html">Edit order</a></li>
+                                <li><a href="responsive_table.html">Cancel order</a></li>
                             </ul>
                         </li>
                         <li class="sub-menu">
                             <a href="javascript:;">
                                 <i class=" fa fa-bar-chart-o"></i>
-                                <span>Maps</span>
+                                <span>Oder Summary</span>
                             </a>
                             <ul class="sub">
-                                <li><a href="google_map.html">Google Map</a></li>
-                                <li><a href="vector_map.html">Vector Map</a></li>
+                                <li><a href="responsive_table.html">Admin Orders</a></li>
+
                             </ul>
                         </li>
                         <li class="sub-menu">
